# pointpca2-pylib

./: Cargo.toml  README.md  environment.yml  pyproject.toml
.github/workflows/: build-wheels.yml
examples/: example_compute_predictors.py
examples/pcs/: tmc13_amphoriskos_vox10_dec_geom01_text01_octree-predlift.ply
python/pointpca2_rs/: __init__.py
src/: lib.rs  utils.rs
