[package]
name = "pointpca2_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "pointpca2_rs"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.5"
ordered-float = "4.0"
num-traits = "0.2.19"
kiddo = "4.2.0"
libm = "0.2.8"
ply-rs = "0.1.3"
numpy = "0.15"
pointpca2-rust = { git = "https://github.com/akaTsunemori/pointpca2-rs.git", branch = "lib" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]